Add a schedule page
Show upcoming appointments and past appointments

--- a/app/views/case/_case-nav.html
+++ b/app/views/case/_case-nav.html
@@ -11,6 +11,13 @@
         </li>
         <li class="moj-sub-navigation__item">
           <a class="moj-sub-navigation__link govuk-link--no-visited-state"
+            {% if currentNavSection == 'schedule' %}
+            aria-current="page"
+            {% endif %}
+            href="/cases/{{ CRN }}/schedule">Schedule</a>
+        </li>
+        <li class="moj-sub-navigation__item">
+          <a class="moj-sub-navigation__link govuk-link--no-visited-state"
             {% if currentNavSection == 'timeline' %}
             aria-current="page"
             {% endif %}
