Rename communications to activity log
- Replace category filters with new filters (first pass, non functional)
- Schedule an activity log sit together

Schedule tells what's next, what's happened, simple facts
Activity log is for analysis, seeing patterns of behaviour

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -80,3 +80,8 @@ $govuk-assets-path: '/govuk/assets/';
 .govuk-hint-s {
   color: govuk-colour("dark-grey");
 }
+
+.app-filter {
+  border: 1px solid $govuk-border-colour;
+  padding: govuk-spacing(3);
+}
