--- a/app/views/case/_case-nav.html
+++ b/app/views/case/_case-nav.html
@@ -21,7 +21,7 @@
             {% if currentNavSection == 'timeline' %}
             aria-current="page"
             {% endif %}
-            href="/cases/{{ CRN }}/communication">Communication</a>
+            href="/cases/{{ CRN }}/activity-log">Activity log</a>
         </li>
         <li class="moj-sub-navigation__item">
           <a class="moj-sub-navigation__link govuk-link--no-visited-state"
