--- a/app/views/case/add-communication.html
+++ b/app/views/case/add-communication.html
@@ -3,7 +3,7 @@
 
 {% block pageNavigation %}
   {{ govukBackLink({
-    href: '/cases/' + CRN + '/communication'
+    href: '/cases/' + CRN + '/activity-log'
   }) }}
 {% endblock %}
 
