--- a/app/views/case/appointment.html
+++ b/app/views/case/appointment.html
@@ -13,8 +13,8 @@
 {% include "case/_case-service-user-banner.html" %}
 
 {{ govukBackLink({
-  text: "Back to communication",
-  href: "/cases/" + CRN + "/communication"
+  text: "Back to activity log",
+  href: "/cases/" + CRN + "/activity-log"
 }) }}
 
 <div class="govuk-grid-row">
