--- a/app/views/case/other-communication.html
+++ b/app/views/case/other-communication.html
@@ -14,8 +14,8 @@
 
 {% block beforeContent %}
   {{ govukBackLink({
-    text: "Back to communication",
-    href: "/cases/" + CRN + "/communication"
+    text: "Back to activity log",
+    href: "/cases/" + CRN + "/activity-log"
   }) }}
 {% endblock %}
 
