--- a/app/views/case/which-appointment-to-add-notes-to.html
+++ b/app/views/case/which-appointment-to-add-notes-to.html
@@ -2,7 +2,7 @@
 {% set title = "Which appointment?" %}
 
 {% block pageNavigation %}
-  {{ govukBackLink({href: '/cases/' + CRN + '/communication/add'}) }}
+  {{ govukBackLink({href: '/cases/' + CRN + '/activity-log/add'}) }}
 {% endblock %}
 
 {% block form %}
