--- a/app/views/case/add-communication.html
+++ b/app/views/case/add-communication.html
@@ -43,7 +43,7 @@
       {
         text: "Appointment notes",
         value: 'appointment-notes'
-      } if communicationEntries(CRN, data, {category: 'all-appointments'}).length > 0,
+      } if activityLog(CRN, data, {category: 'all-appointments'}).length > 0,
       {
         text: "Other communication",
         value: 'other',
