--- a/app/views/confirm-attendance/sensitive.html
+++ b/app/views/confirm-attendance/sensitive.html
@@ -22,8 +22,5 @@
     ]
   } | decorateFormAttributes(['communication', CRN, sessionId, 'sensitive'])) }}
 
-  {{ govukDetails({
-    summaryText: "Help with sensitive content",
-    text: ""
-  }) }}
+  {% include "includes/sensitive-guidance.html" %}
 {% endblock %}
