Friendlier public URLs for timepicker JS and CSS

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -26,7 +26,7 @@ $govuk-assets-path: '/govuk/assets/';
 
 @import 'accessible-autocomplete.min';
 
-@import 'node_modules/timepicker/jquery.timepicker.css';
+@import 'timepicker/jquery.timepicker.css';
 
 // @import 'max-widths';
 @import 'govuk-page-masthead';
