Always show time in govuk style (4:00pm => 4pm)

--- a/app/views/arrange-a-session/_session-details.html
+++ b/app/views/arrange-a-session/_session-details.html
@@ -69,7 +69,7 @@
     },
     {
       key: { text: "Time" },
-      value: { text: session.summary.time },
+      value: { text: appointment['session-start-time'] | govukTime + ' to ' + appointment['session-end-time'] | govukTime },
       actions: {
         items: [
           {
