--- a/app/views/confirm-attendance/index.html
+++ b/app/views/confirm-attendance/index.html
@@ -8,7 +8,7 @@
   {% for appointment in previousAppointmentsWithoutOutcomes(CRN, data) %}
     {% set appointmentRadioItems = (appointmentRadioItems.push({
       text: appointment['type-of-session'] + ' – ' + appointment['session-date'] | dateWithDayAndWithoutYear +
-              ' from ' + appointment['session-start-time'] + ' to ' + appointment['session-end-time'],
+              ' from ' + appointment['session-start-time'] | govukTime + ' to ' + appointment['session-end-time'] | govukTime,
       value: appointment.sessionId
     }), appointmentRadioItems) %}
   {% endfor %}
