Add link to activity log from schedule

--- a/app/views/case/schedule.html
+++ b/app/views/case/schedule.html
@@ -64,8 +64,7 @@
 </table>
 
 <ul class="govuk-list">
-  <li><a href="#">View all past appointments</a></li>
-  <li><a href="#">View full contact history</a></li>
+  <li><a href="/cases/{{ CRN }}/activity-log">View full activity log</a></li>
 </ul>
 
 {% endblock %}
