--- a/app/views/case/appointment.html
+++ b/app/views/case/appointment.html
@@ -3,6 +3,20 @@
 {% set title = appointment['type-of-session'] + ' details' %}
 {% block pageTitle %}{{ title }}{% endblock %}
 
+{% block beforeContent %}
+  {% if appointmentType == 'upcoming'%}
+    {{ govukBackLink({
+      text: "Back to schedule",
+      href: "/cases/" + CRN + "/schedule"
+    }) }}
+  {% else %}
+    {{ govukBackLink({
+      text: "Back to activity log",
+      href: "/cases/" + CRN + "/activity-log"
+    }) }}
+  {% endif %}
+{% endblock %}
+
 {% block content %}
 
 {{ govukNotificationBanner({
@@ -10,48 +24,45 @@
   type: 'success'
 }) if messages.length > 0 }}
 
-{% include "case/_case-service-user-banner.html" %}
-
-{{ govukBackLink({
-  text: "Back to activity log",
-  href: "/cases/" + CRN + "/activity-log"
-}) }}
-
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
       <span class="govuk-caption-l">{{ appointmentType | capitalize }} appointment</span>
       {{ appointment['type-of-session'] }}
 
-      {% if appointment['session-counts-towards-rar'] === 'Yes' %}
-        {{ govukTag({text: 'RAR', classes: 'govuk-tag--purple'}) }}
-      {% endif %}
+      {% if appointment['did-service-user-comply'] or appointment.sensitive === 'Yes' or appointment['session-counts-towards-rar'] === 'Yes' %}
+      <div class="govuk-!-margin-top-1">
+        {% if appointment['session-counts-towards-rar'] === 'Yes' %}
+          {{ govukTag({text: 'RAR', classes: 'govuk-tag--purple'}) }}
+        {% endif %}
 
-      {% if appointment['did-service-user-comply'] === 'Yes' %}
-        {{ govukTag({text: 'Complied', classes: 'govuk-tag--green'}) }}
-      {% elseif appointment['did-service-user-comply'] === 'No' %}
-        {{ govukTag({text: 'Failed to comply', classes: 'govuk-tag--red'}) }}
-      {% elseif appointment['did-service-user-comply'] === 'Absent' %}
-        {{ govukTag({text: 'Absent', classes: 'govuk-tag--red'}) }}
-      {% endif %}
+        {% if appointment['did-service-user-comply'] === 'Yes' %}
+          {{ govukTag({text: 'Complied', classes: 'govuk-tag--green'}) }}
+        {% elseif appointment['did-service-user-comply'] === 'No' %}
+          {{ govukTag({text: 'Failed to comply', classes: 'govuk-tag--red'}) }}
+        {% elseif appointment['did-service-user-comply'] === 'Absent' %}
+          {{ govukTag({text: 'Absent', classes: 'govuk-tag--red'}) }}
+        {% endif %}
 
-      {% if appointment.sensitive === 'Yes' %}
-        {{ govukTag({ text: "Sensitive", classes: "govuk-tag--grey" }) }}
+        {% if appointment.sensitive === 'Yes' %}
+          {{ govukTag({ text: "Sensitive", classes: "govuk-tag--grey" }) }}
+        {% endif %}
+      </div>
       {% endif %}
     </h1>
-
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-6">
-      {{ appointment['session-date'] | dateWithYear }} from {{ appointment['session-start-time'] | govukTime }} to {{ appointment['session-end-time'] | govukTime }}
-      {% if appointment.repeat === 'Yes' %}
-        {{ govukTag({text: 'Repeat', classes: 'govuk-tag--turquoise'}) }}
-      {% endif %}
-    </h2>
   </div>
 </div>
 
+<h3 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6">Appointment details</h3>
+
+{% set showAction = false %}
+{% set hideNotes = isOutcomeRecorded %}
+{% set notesEditPath = "/cases/" + CRN + "/appointments/" + sessionId + '/notes' %}
+{% include 'arrange-a-session/_session-details.html' %}
+
 {% set isOutcomeRecorded = (not not appointment['did-service-user-comply'] ) %}
 {% if isOutcomeRecorded %}
-  <h3 class="govuk-heading-s">Outcome details</h3>
+  <h3 class="govuk-heading-m govuk-!-font-size-27 govuk-!-margin-top-6">Outcome details</h3>
 
   {% set notesEditPath = "/cases/" + CRN + "/appointments/" + sessionId + '/notes' %}
   {% include 'confirm-attendance/_outcome-details.html' %}
@@ -59,18 +70,11 @@
   {{ appWarningBanner('Attendance not recorded. <a href="/confirm-attendance/' + CRN + '/' + appointment.sessionId + '">Record attendance</a>') }}
 {% endif %}
 
-<h3 class="govuk-heading-s">Appointment details</h3>
-
-{% set showAction = false %}
-{% set hideNotes = isOutcomeRecorded %}
-{% set notesEditPath = "/cases/" + CRN + "/appointments/" + sessionId + '/notes' %}
-{% include 'arrange-a-session/_session-details.html' %}
-
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     {% if appointmentType === 'upcoming' %}
       <p class="govuk-body govuk-!-margin-bottom-6">
-        <a href="/confirm-attendance/{{ CRN }}/{{ sessionId }}">Confirm attendance and add notes</a>
+        <a href="/confirm-attendance/{{ CRN }}/{{ sessionId }}">Record attendance and add notes</a>
       </p>
       <p class="govuk-body govuk-!-margin-bottom-6">
         <a href="/arrange-a-session/{{ CRN }}/{{ sessionId }}/cancel">Cancel appointment</a>
