Switch from "Save and continue" to "Continue"
Nothing will be saved to Delius until the final confirmation step is completed. As nothing is persisted, Continue is more accurate.

--- a/app/views/arrange-a-session/notes.html
+++ b/app/views/arrange-a-session/notes.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-form.html" %}
 {% set title = "Add appointment notes" %}
-{% set buttonText = 'Save and continue' %}
+{% set buttonText = 'Continue' %}
 
 {% block form %}
   <div class="govuk-form-group">
