--- a/app/views/confirm-attendance/compliance.html
+++ b/app/views/confirm-attendance/compliance.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-form.html" %}
 {% set title = 'Did ' + case.serviceUserPersonalDetails.firstName + ' attend and comply?' %}
-{% set buttonText = 'Save and continue' %}
+{% set buttonText = 'Continue' %}
 
 {% block form %}
   {{ govukRadios({
