--- a/app/views/arrange-a-session/rar.html
+++ b/app/views/arrange-a-session/rar.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-form.html" %}
 {% set title = 'Will this appointment count towards RAR?' %}
-{% set buttonText = 'Save and continue' %}
+{% set buttonText = 'Continue' %}
 
 {% block form %}
   {{ govukRadios({
