--- a/app/views/confirm-attendance/add-notes.html
+++ b/app/views/confirm-attendance/add-notes.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-form.html" %}
 {% set title = "Would you like to add notes about this appointment?" %}
-{% set buttonText = 'Save and continue' %}
+{% set buttonText = 'Continue' %}
 
 {% block form %}
   {{ govukRadios({
