--- a/app/views/confirm-attendance/index.html
+++ b/app/views/confirm-attendance/index.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-form.html" %}
 {% set title = "When was the appointment?" %}
-{% set buttonText = 'Save and continue' %}
+{% set buttonText = 'Continue' %}
 
 {% block form %}
   {% set appointmentRadioItems = [] %}
