--- a/app/views/confirm-attendance/notes.html
+++ b/app/views/confirm-attendance/notes.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-form.html" %}
 {% set title = "Add appointment notes" %}
-{% set buttonText = 'Save and continue' %}
+{% set buttonText = 'Continue' %}
 
 {% block form %}
   <div class="govuk-form-group">
