--- a/app/views/confirm-attendance/rar-categories.html
+++ b/app/views/confirm-attendance/rar-categories.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-form.html" %}
 {% set title = 'What should this appointment count towards?' %}
-{% set buttonText = 'Save and continue' %}
+{% set buttonText = 'Continue' %}
 
 {% block form %}
   {% set rarRadioItems = [] %}
