Rename "arrange session" to "arrange appointment"
We moved away from using the term "session"

--- a/app/views/arrange-appointment/_appointment-details.html
+++ b/app/views/arrange-appointment/_appointment-details.html
@@ -1,4 +1,4 @@
-{% set arrangeSessionPath = "/arrange-a-session/" +  CRN + "/" + sessionId %}
+{% set arrangeSessionPath = "/arrange-appointment/" +  CRN + "/" + sessionId %}
 
 {% set session = arrangedSession({
   providerCode: data['provider-code'],
