--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -240,7 +240,7 @@
       Actions
     </h2>
     <p class="govuk-body">
-      <a href="/arrange-a-session/{{ CRN }}/start" class="govuk-button govuk-!-margin-bottom-0">
+      <a href="/arrange-appointment/{{ CRN }}/start" class="govuk-button govuk-!-margin-bottom-0">
         Arrange an appointment
       </a>
     </p>
@@ -256,7 +256,7 @@
           {{ nextApp['session-date'] | dateWithDayAndWithoutYear }} from<br>
           {{ nextApp['session-start-time'] | govukTime }} to {{ nextApp['session-end-time'] | govukTime }}
         </strong>
-        <a href="/arrange-a-session/{{ CRN }}/{{ nextApp.sessionId }}/rearrange-or-cancel" class="govuk-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
+        <a href="/arrange-appointment/{{ CRN }}/{{ nextApp.sessionId }}/rearrange-or-cancel" class="govuk-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
           data-module="govuk-button">
           Rearrange or cancel appointment
         </a>
