--- a/app/views/case/schedule.html
+++ b/app/views/case/schedule.html
@@ -13,7 +13,7 @@
 <h1 class="govuk-heading-l govuk-!-margin-bottom-4">{{ title }}</h1>
 {{ govukButton({
   html: 'Arrange an appointment',
-  href: '/arrange-a-session/' + CRN + '/start',
+  href: '/arrange-appointment/' + CRN + '/start',
   classes: 'govuk-!-margin-bottom-8'
 }) }}
 
