--- a/app/views/case/appointment.html
+++ b/app/views/case/appointment.html
@@ -58,7 +58,7 @@
 {% set showAction = false %}
 {% set hideNotes = isOutcomeRecorded %}
 {% set notesEditPath = "/cases/" + CRN + "/appointments/" + sessionId + '/notes' %}
-{% include 'arrange-a-session/_session-details.html' %}
+{% include 'arrange-appointment/_appointment-details.html' %}
 
 {% set isOutcomeRecorded = (not not appointment['did-service-user-comply'] ) %}
 {% if isOutcomeRecorded %}
@@ -77,7 +77,7 @@
         <a href="/confirm-attendance/{{ CRN }}/{{ sessionId }}">Record attendance and add notes</a>
       </p>
       <p class="govuk-body govuk-!-margin-bottom-6">
-        <a href="/arrange-a-session/{{ CRN }}/{{ sessionId }}/cancel">Cancel appointment</a>
+        <a href="/arrange-appointment/{{ CRN }}/{{ sessionId }}/cancel">Cancel appointment</a>
       </p>
     {% endif %}
 
