--- a/app/views/arrange-appointment/rar-categories.html
+++ b/app/views/arrange-appointment/rar-categories.html
@@ -1,5 +1,5 @@
 {% extends "_wizard-form.html" %}
-{% set isRepeating = data.communication[CRN][sessionId].repeating == 'Yes' %}
+{% set isRepeating = appointment.repeating == 'Yes' %}
 {% set title = 'What will this appointment count towards?' %}
 {% set buttonText = 'Continue' %}
 
@@ -35,10 +35,12 @@
       },
       items: [
         {
-          text: 'Yes'
+          text: 'Yes',
+          value: 'yes'
         },
         {
-          text: 'No, only this appointment'
+          text: 'No, only this appointment',
+          value: 'no'
         }
       ]
     } | decorateFormAttributes(['communication', CRN, sessionId, 'repeating-session-counts-towards-rar'])) }}
