--- a/app/views/arrange-appointment/sensitive.html
+++ b/app/views/arrange-appointment/sensitive.html
@@ -1,5 +1,5 @@
 {% extends "_wizard-form.html" %}
-{% set isRepeating = data.communication[CRN][sessionId].repeating == 'Yes' %}
+{% set isRepeating = appointment.repeating == 'Yes' %}
 {% set title = 'Does this appointment include sensitive information?' %}
 
 {% block form %}
@@ -14,11 +14,11 @@
       items: [
         {
           text: 'Yes',
-          value: 'yes'
+          value: 'Yes'
         },
         {
           text: 'No, only this appointment',
-          value: 'no'
+          value: 'No'
         }
       ]
     } | decorateFormAttributes(['communication', CRN, sessionId, 'repeating-sensitive'])) }}
