--- a/app/views/case/schedule.html
+++ b/app/views/case/schedule.html
@@ -19,6 +19,7 @@
 
 <h2 class="govuk-heading-m govuk-!-font-size-27">Future appointments</h2>
 
+{% if futureAppointments(CRN, data).length > 0 %}
 <table class="govuk-table">
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
@@ -37,6 +38,10 @@
     {% endfor %}
   </tbody>
 </table>
+{% else %}
+
+<p>There are no appointments scheduled</p>
+{% endif %}
 
 <h2 class="govuk-heading-m govuk-!-font-size-27">Recent appointments</h2>
 
