If this appointment not sensitive, neither are repeating

--- a/app/views/arrange-appointment/check.html
+++ b/app/views/arrange-appointment/check.html
@@ -111,7 +111,7 @@
           },
           {
             key: { text: "Sensitive" },
-            value: { text: appointment['repeating-sensitive'] },
+            value: { text: appointment['repeating-sensitive'] or appointment['sensitive'] },
             actions: {
               items: [
                 {
