--- a/app/views/confirm-attendance/_outcome-details.html
+++ b/app/views/confirm-attendance/_outcome-details.html
@@ -105,7 +105,7 @@
     } if appointment['filenames'].length > 0,
     {
       key: { text: "Sensitive" },
-      value: { text: appointment['sensitive'] },
+      value: { text: appointment['sensitive'] or 'No' },
       actions: {
         items: [
           {
