Add initial risk flag list and pages

--- a/app/views/case/_case-nav.html
+++ b/app/views/case/_case-nav.html
@@ -37,6 +37,13 @@
             {% endif %}
             href="/cases/{{ CRN }}/sentence">Sentence</a>
         </li>
+        <li class="moj-sub-navigation__item">
+          <a class="moj-sub-navigation__link govuk-link--no-visited-state"
+            {% if currentNavSection == 'flags' %}
+            aria-current="page"
+            {% endif %}
+            href="/cases/{{ CRN }}/flags">Risk flags</a>
+        </li>
       </ul>
     </nav>
   </div>
