Bring current flags inline for Brian

--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -63,7 +63,7 @@
       rows: [
         {
           key: {
-            html: govukTag({ html: '<a href="#">Sex offender</a>', classes: 'govuk-tag--link govuk-tag--purple' })
+            html: govukTag({ html: '<a href="#">Registered sex offender</a>', classes: 'govuk-tag--link govuk-tag--purple' })
           },
           value: {
             html: '
