--- a/app/views/case/flags.html
+++ b/app/views/case/flags.html
@@ -70,25 +70,25 @@
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" style="width: 30%">Flag</th>
-      <th class="govuk-table__header" style="width: 55%">Description</th>
+      <th class="govuk-table__header" style="width: 55%">Notes</th>
       <th class="govuk-table__header" style="width: 15%">Review due</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="/cases/' + CRN + '/flag">Registered sex offender</a>', classes: 'govuk-tag--link govuk-tag--purple' }) }}</td>
-      <td class="govuk-table__cell">Possession of indecent images</td>
-      <td class="govuk-table__cell">5 days</td>
+      <td class="govuk-table__cell app-flags-table-cell">Possession of indecent images</td>
+      <td class="govuk-table__cell app-flags-table-cell">5 days</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="#">MAPPA</a>', classes: 'govuk-tag--link govuk-tag--purple' }) }}</td>
-      <td class="govuk-table__cell">Level 2, Category 3</td>
-      <td class="govuk-table__cell"><a href="#">Needs review</a></td>
+      <td class="govuk-table__cell app-flags-table-cell">Level 2, Category 3</td>
+      <td class="govuk-table__cell app-flags-table-cell"><a href="#">Needs review</a></td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="#">Restraining order</a>', classes: 'govuk-tag--link govuk-tag--turquoise' }) }}</td>
-      <td class="govuk-table__cell">Against ex-partner</td>
-      <td class="govuk-table__cell">10 Nov 2020</td>
+      <td class="govuk-table__cell app-flags-table-cell">Against ex-partner</td>
+      <td class="govuk-table__cell app-flags-table-cell">10 Nov 2020</td>
     </tr>
   </tbody>
 </table>
@@ -98,35 +98,35 @@
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
       <th class="govuk-table__header" style="width: 30%">Flag</th>
-      <th class="govuk-table__header" style="width: 55%">Description</th>
+      <th class="govuk-table__header" style="width: 55%">Notes</th>
       <th class="govuk-table__header" style="width: 20%">Date removed</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="#">Weapons</a>', classes: 'govuk-tag--link govuk-tag--pink' }) }}</td>
-      <td class="govuk-table__cell">Caught carrying a knife</td>
-      <td class="govuk-table__cell">Today</td>
+      <td class="govuk-table__cell app-flags-table-cell">Caught carrying a knife</td>
+      <td class="govuk-table__cell app-flags-table-cell">Today</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="#">Domestic abuse</a>', classes: 'govuk-tag--link govuk-tag--purple' }) }}</td>
-      <td class="govuk-table__cell">Possession of indecent images</td>
-      <td class="govuk-table__cell">Today</td>
+      <td class="govuk-table__cell app-flags-table-cell">Possession of indecent images</td>
+      <td class="govuk-table__cell app-flags-table-cell">Today</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="#">Victim</a>', classes: 'govuk-tag--link govuk-tag--turquoise' }) }}</td>
-      <td class="govuk-table__cell">Level 2, Category 3</td>
-      <td class="govuk-table__cell">2 Jan 2021</td>
+      <td class="govuk-table__cell app-flags-table-cell">Level 2, Category 3</td>
+      <td class="govuk-table__cell app-flags-table-cell">2 Jan 2021</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="#">Vulnerable</a>', classes: 'govuk-tag--link govuk-tag--turquoise' }) }}</td>
-      <td class="govuk-table__cell">Level 2, Category 3</td>
-      <td class="govuk-table__cell">10 Nov 2020</td>
+      <td class="govuk-table__cell app-flags-table-cell">Level 2, Category 3</td>
+      <td class="govuk-table__cell app-flags-table-cell">10 Nov 2020</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">{{ govukTag({ html: '<a href="#">IOM</a>', classes: 'govuk-tag--link govuk-tag--grey' }) }}</td>
-      <td class="govuk-table__cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
-      <td class="govuk-table__cell">10 Nov 2020</td>
+      <td class="govuk-table__cell app-flags-table-cell">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+      <td class="govuk-table__cell app-flags-table-cell">10 Nov 2020</td>
     </tr>
   </tbody>
 </table>
